# becky-tools

./: .env.example  .gitattributes  .gitignore  ACCESSIBILITY.md  ARRANGEMENT-RULES.md  BECKY-CANVAS-ROADMAP.md  BECKY-CLIP-HANDOFF.md  BECKY-REVIEW-CHECKLIST.md  BECKY-USER-GUIDE.md  BUILD-AGENT-BRIEFING.md  Build Becky Clip.bat  Build Becky Drum.bat  Build Becky NLE.bat  CANVAS-BLUEPRINT.md  CANVAS-INSPIRATION.md  CANVAS-NORTH-STAR.md  CLAUDE.md  CLOUD-HANDOFF-REAPER.md  COLLAB-PROTOCOL.md  CONTINUE-HERE.md  Caption This Edit.bat  DRUM-MACHINE-DECISION.md  FEATURE-INVENTORY.md  FORENSIC-OUTPUT-PHILOSOPHY.md  GAP-ANALYSIS.md  GUI-ACCEPTANCE-CHECKLIST.md  GUI-CHECKLIST-STATUS.md  GUI-RULES.md  HANDOFF-BECKY-REVIEW-3.md  HANDOFF-BECKY-REVIEW-APP.md  HANDOFF-BECKY-VOICE.md  HANDOFF-BECKY-WPF-GUI.md  HANDOFF-CANVAS-GUI.md  HANDOFF-LOG.md  HANDOFF-MPV-SWAP-STATE.md  HANDOFF-NATIVE-TIMELINE.md  HANDOFF-NEXT-AGENT.md  HANDOFF-PROXY-SNAPPINESS.md  HANDOFF-REAPER-BRAIN.md  HANDOFF-ROUTING-CANVAS.md  (+93 more)
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
becky-clip-work/: FIX-PLAN.md  capture-window.ps1  capture.ps1  cdp_drive.py  cdp_verify.py  render_out.txt  validate_render.json  verify_investigate.py  verify_render.py
becky-clip-work/cut-tests/: ae_multi.v3  ae_premiere.xml  ae_timeline_v3.v3  concat_list.txt
becky-clip-work/demo-case/: demo.reel.json  kitchen-cam.mp4.beckymeta.json  kitchen-cam.srt  ring-doorbell.mp4.beckymeta.json  ring-doorbell.srt
becky-clip-work/hydrogen-groove/: beat.h2song  drumkit.xml
becky-clip-work/kdenlive-spike/: cutlist.json  e2e.kdenlive  gen.kdenlive  test1.kdenlive  test2.kdenlive  test3.kdenlive  test4.kdenlive
becky-clip-work/live-case/: interview-2026-05-14.srt
becky-clip-work/reel-smoke/: reel.json  smoke.edl  smoke.srt
becky-clip-work/research/: R-AI.md  R-CUT.md  R-REUSE.md  R-STACK.md
becky-clip-work/spikes/gio/: go.mod  main.go
becky-clip-work/spikes/webview2/: go.mod  main.go
becky-clip-work/srt-test/: Livestream 2026-01-05.en.srt
becky-go/: README.md  becky-voice.rules.json  build-all-tools.bat  go.mod  go.sum  mix.json
becky-go/cmd/arrange/: flags.go  main.go
becky-go/cmd/ask/: actions.go  actions_test.go  catalog.go  config_bridge.go  coverage_test.go  forensic.go  forensic_test.go  intent.go  intent_llm_test.go  intent_test.go  llama.go  main.go  model.go  model_test.go  output.go  output_test.go  pitch.go  pitch_test.go  plan.go  plan_test.go  recipe.go  render_test.go  router.go  run.go  singleshot.go  singleshot_test.go  ssformat.go  styles.go  (+5 more)
becky-go/config/: context-review.prompt.md
becky-go/packs/: default.json  reaper.json
becky-go/scripts/: vision-smoke-gate.ps1
becky-reaper-work/: demo.rpp  done.txt  jordan_template.rpp  reference.rpp
becky-reaper-work/peaks/: tone.wav.reapeaks
gui/BeckyReview/: .gitignore  App.xaml  App.xaml.cs  BeckyEngine.cs  BeckyReview.csproj  BeckyTools.cs  MainWindow.xaml  MainWindow.xaml.cs  MpvPlayer.cs  README.md  fetch-mpv.ps1
gui/BeckyReviewNative/: App.xaml  App.xaml.cs  BeckyEngine.cs  BeckyReviewNative.csproj  BeckyTools.cs  MainWindow.Timeline.cs  MainWindow.xaml  MainWindow.xaml.cs  MpvPlayer.cs  TimelineControl.cs
gui/BeckyWindow/: App.xaml  App.xaml.cs  BeckyWindow.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md
gui/OrbEngine/: Api.cs  FaceMesh.cs  OrbEngine.csproj  OrbSim.cs
gui/OrbEngine.Tests/: OrbEngine.Tests.csproj  OrbSimTests.cs
gui/OrbPreview/: MainWindow.xaml  MainWindow.xaml.cs  OrbPreview.csproj  Program.cs
gui/Whoretana/: App.xaml  App.xaml.cs  BubbleWindow.xaml  BubbleWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ProcessRunner.cs  README.md  Settings.cs  Whoretana.csproj  app.manifest
native/audio-host/: .gitignore  CMakeLists.txt  README.md
native/audio-host/scripts/: build.ps1  fetch-deps.ps1
native/audio-host/src/: audio_device.cpp  audio_device.h  main.cpp  plugin_probe.cpp  plugin_probe.h  protocol.cpp  protocol.h  vst_host.cpp  vst_host.h  wav_writer.h
native/becky-engine-probe/: build.sh  diag_adapters.cpp  diag_hw.cpp  main.cpp
native/becky-review/: .gitignore  _build.bat  _i4_warmup_test.txt  _i6_editlog_cycle19.txt  _i6_editlog_cycle19b.txt  _launch_check.ps1  _rebuild_out2.txt  _review_build2.bat  _zs.bat  _zs2.bat  becky-review.exp  becky-review.lib  becky-review.map  deployed-launch-log.txt  engine.cpp  engine.h  enumwin-log.txt  enumwin.ps1  launch-deployed.ps1  main.cpp  main.cpp.bak  verify-engine.ps1
native/becky-timeline/: .gitignore  Open Becky Timeline.bat  main.cpp
native/ges-bench/: .gitignore  Open Scrub Proof.bat  README.md  ges_scrub.c  gst_compose.c  gst_scrub.c  gst_scrub_indep.c  gst_scrubwin.c
native/video-preview/: .gitignore  BUILD-NOTES.md  Cargo.toml
native/video-preview/src/: decode.rs  font.rs  gpu.rs  main.rs  overlay.rs  pngio.rs  probe.rs  protocol.rs  selftest.rs  window.rs
research/: RED-TEAM-and-nuances.md  agent-control.md  becky-control-schema.md  becky-visual-assets-and-icons.md  bookmarks-ai-music-daw-crawl.md  bookmarks-gui-toolkit-crawl.md  bookmarks-video-nle-crawl.md  daw-ai-control-reaper-vs-ableton.md  daw-nle-strategy-feasibility.md  daw-video-timeline-gui-components.md  director-videodb-mining.md  existing-oss-we-keep-reinventing.md  gemma4-qat-upgrade.md  go-dsp-midi.md  go-gui-iteration-and-design-tools.md  go-packages-explained-for-jordan.md  gui-embedding-revisit-2026-06.md  gui-toolkit.md  maschine-arrangement.md  maschine-fx-mixer.md  maschine-groove-smartplay.md  maschine-sampler.md  opendaw-adoption-plan.md  piano-roll.md  preference-learning.md  qwen-daw-review.md  reference-projects-gap-analysis.md  shotcut-api.md  timing-clock.md  tts.md  videoagent-integration.md
scripts/: build-becky-edit-llama.ps1  check-launchers.sh  clip-sync.ps1  get-gemma4-qat.ps1  get-krea2.ps1  get-qwen35.ps1  gui-diff.ps1  install-hooks.sh  model-heartbeat.ps1  register-clip-sync-task.ps1  setup-asr-gpu.ps1  visual-critic.ps1
scripts/git-hooks/: pre-commit
scripts/gui-test/: input.ps1  shot.ps1  winshot.ps1
vegas/: BeckyReviewTimeline.cs  README.md
(+1065 files in other folders)
